Tests/errors/undefinedFunc.scisl
def non
print "nothing"
endblock

call dunno